Fixing layout on smaller screens

--- a/css/wupadupa-styles-2011-03-09.scss
+++ b/css/wupadupa-styles-2011-03-09.scss
@@ -7,12 +7,12 @@
 
 /* @group common and main structure */
 body, html, ul, li, dl, dt, dd, form, h1, h2 , h3, h4, h5, p {margin: 0; padding: 0;}
-html {box-sizing: border-box;}
+html, body {box-sizing: border-box;}
 ul, li, ul li {list-style-type: none;}
 body {background: #c3d5da; color: #333; font-family: "Trebuchet MS", Verdana, Arial; font-size: 100.1%; text-align: center;}
-.main_container {background: #fff; margin: 0 auto; max-width: 960px; position: relative; width: 100%;}
+.main_container {background: #fff; box-sizing: border-box; margin: 0 auto; max-width: 960px; position: relative; width: 100%;}
 .header {background: url(../images/header.jpg) no-repeat 0 0; color: #fff; height: 199px; position: relative; text-align: right;}
-.main_container_inner {min-height: 200px; height: auto !important; height: 200px; max-width: 900px; overflow: hidden; padding: 20px 30px 0; position: relative; text-align: left; width: 100%;} 
+.main_container_inner {box-sizing: border-box; min-height: 200px; height: auto !important; height: 200px; max-width: 900px; overflow: hidden; padding: 20px 30px 0; position: relative; text-align: left; width: 100%;} 
 
 .header_link {height: 90px; left: 18px; position: absolute; top: 50px; width: 175px;}
 .header p {clear: right; float: right; font-size: 1em; margin: 0 20px 0 0; padding-top: 20px; width: 275px;}
